@@ -105,7 +105,8 @@ class AnnotationGeneratorTest extends BaseServiceTestRunner {
         this.termTwo = new Term();
         termTwo.setUri(TERM_TWO_ID);
         termTwo.setLabel(MultilingualString
-                .create("Územní plán hlavního města Prahy", cz.cvut.kbss.termit.environment.Environment.LANGUAGE));
+                                 .create("Územní plán hlavního města Prahy",
+                                         cz.cvut.kbss.termit.environment.Environment.LANGUAGE));
         final User author = Generator.generateUserWithId();
         this.vocabulary = new cz.cvut.kbss.termit.model.Vocabulary();
         vocabulary.setLabel("Test Vocabulary");
@@ -181,23 +182,24 @@ class AnnotationGeneratorTest extends BaseServiceTestRunner {
         assert element.size() == 1;
         element.attr(Constants.RDFa.TYPE, cz.cvut.kbss.termit.util.Vocabulary.s_c_slovnik);
 
-        return new ByteArrayInputStream(doc.toString().getBytes(StandardCharsets.UTF_8.name()));
+        return new ByteArrayInputStream(doc.toString().getBytes(StandardCharsets.UTF_8));
     }
 
     @Test
     void generateAnnotationsThrowsAnnotationGenerationExceptionForUnsupportedFileType() throws Exception {
-        final InputStream content = loadFile("application.yml");
-        file.setLabel(generateIncompatibleFile());
-        final AnnotationGenerationException ex = assertThrows(AnnotationGenerationException.class,
-                () -> sut.generateAnnotations(content, file));
-        assertThat(ex.getMessage(), containsString("Unsupported type of file"));
+        try (final InputStream content = loadFile("application.yml")) {
+            file.setLabel(generateIncompatibleFile());
+            final AnnotationGenerationException ex = assertThrows(AnnotationGenerationException.class,
+                                                                  () -> sut.generateAnnotations(content, file));
+            assertThat(ex.getMessage(), containsString("Unsupported type of file"));
+        }
     }
 
     private String generateIncompatibleFile() throws Exception {
         final String tempDir = System.getProperty("java.io.tmpdir");
         config.getFile().setStorage(tempDir);
         final java.io.File docDir = new java.io.File(tempDir + java.io.File.separator +
-                document.getDirectoryName());
+                                                             document.getDirectoryName());
         Files.createDirectory(docDir.toPath());
         docDir.deleteOnExit();
         final java.io.File content = Files.createTempFile(docDir.toPath(), "test", ".txt").toFile();
@@ -219,7 +221,7 @@ class AnnotationGeneratorTest extends BaseServiceTestRunner {
     void generateAnnotationsThrowsAnnotationGenerationExceptionForUnknownTermIdentifier() throws Exception {
         final InputStream content = setUnknownTermIdentifier(loadFile("data/rdfa-simple.html"));
         final AnnotationGenerationException ex = assertThrows(AnnotationGenerationException.class,
-                () -> sut.generateAnnotations(content, file));
+                                                              () -> sut.generateAnnotations(content, file));
         assertThat(ex.getMessage(), containsString("Term with id "));
         assertThat(ex.getMessage(), containsString("not found"));
     }
@@ -237,11 +239,11 @@ class AnnotationGeneratorTest extends BaseServiceTestRunner {
     void generateAnnotationsHandlesLargerDocumentAnalysis() throws Exception {
         final Term mp = new Term();
         mp.setLabel(MultilingualString
-                .create("Metropolitní plán", cz.cvut.kbss.termit.environment.Environment.LANGUAGE));
+                            .create("Metropolitní plán", cz.cvut.kbss.termit.environment.Environment.LANGUAGE));
         mp.setUri(URI.create("http://test.org/pojem/metropolitni-plan"));
         final Term ma = new Term();
         ma.setLabel(MultilingualString
-                .create("Správní území Prahy", cz.cvut.kbss.termit.environment.Environment.LANGUAGE));
+                            .create("Správní území Prahy", cz.cvut.kbss.termit.environment.Environment.LANGUAGE));
         ma.setUri(URI.create("http://test.org/pojem/spravni-uzemi-prahy"));
         final Term area = new Term();
         area.setLabel(MultilingualString.create("Území", cz.cvut.kbss.termit.environment.Environment.LANGUAGE));
@@ -372,7 +374,7 @@ class AnnotationGeneratorTest extends BaseServiceTestRunner {
         final Term otherTerm = new Term();
         otherTerm.setUri(Generator.generateUri());
         otherTerm.setLabel(MultilingualString
-                .create("Other term", cz.cvut.kbss.termit.environment.Environment.LANGUAGE));
+                                   .create("Other term", cz.cvut.kbss.termit.environment.Environment.LANGUAGE));
         final TextQuoteSelector selector = new TextQuoteSelector("Územní plán");
         selector.setPrefix("RDFa simple");
         selector.setSuffix(" hlavního města Prahy.");
@@ -402,8 +404,9 @@ class AnnotationGeneratorTest extends BaseServiceTestRunner {
         final List<TermOccurrence> occurrencesTwo = termOccurrenceDao.findAllTargeting(file);
         assertEquals(occurrencesOne.size(), occurrencesTwo.size());
         final int instanceCount = em.createNativeQuery("SELECT (count(*) as ?count) WHERE {" +
-                "?x a ?termOccurrence ." +
-                "}", Integer.class).setParameter("termOccurrence", URI.create(Vocabulary.s_c_vyskyt_termu))
+                                                               "?x a ?termOccurrence ." +
+                                                               "}", Integer.class)
+                                    .setParameter("termOccurrence", URI.create(Vocabulary.s_c_vyskyt_termu))
                                     .getSingleResult();
         assertEquals(occurrencesTwo.size(), instanceCount);
     }
@@ -413,8 +416,7 @@ class AnnotationGeneratorTest extends BaseServiceTestRunner {
         generateFile();
         sut.generateAnnotations(loadFile("data/rdfa-simple.html"), file);
         final List<TermOccurrence> occurrencesOne = termOccurrenceDao.findAllTargeting(file);
-        final List<TermOccurrence> confirmed = occurrencesOne.stream().filter(to -> Generator.randomBoolean()).collect(
-                Collectors.toList());
+        final List<TermOccurrence> confirmed = occurrencesOne.stream().filter(to -> Generator.randomBoolean()).toList();
         transactional(() -> confirmed.forEach(to -> {
             to.removeType(Vocabulary.s_c_navrzeny_vyskyt_termu);
             em.merge(to);
